--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                         </div>
                      </div>
                      <div class="slider-navigation-buttons">
-                           <img class="slider-arrow left" src="jpg/left-arrow.png" alt="back">
+                           <img class="slider-arrow left" src="Jpg/test/left-arrow.png" alt="back">
                            <div class="circles">
                            </div>
                            <img class="slider-arrow right" src="jpg/rigth-arrow.png" alt="right">
